01-october-2009 - gocha - win32 - movie play dialog displays movie time based on ~60.1 (~50.1 PAL) instead of 60 & 50
26-september-2009 - qeed - fixed action 52 game that was broken in fceux >2.0.3 
16-september-2009 - ugetab - win32 - Restored DPCM Logging when Code/Data Logger is active
september-2009 - FatRatKnight - Finally got in that "invert" value for joypad.set. This value simply inverts the player input. Actually, any string will invert it, since we have not used strings for anything else in joypad.set.
15-september-2009 - FatRatKnight - Reworked how input is taken from lua, and generally everything related to joypad.set and what it affects. Now setting stuff to false will: Prevent user control for exactly one frame, and allow more than one false button as a time. Yeah, bug fixes. Hopefully runs a little faster now.
22-august-2009 - adelikat - Win32 - Map Hotkeys Dialog - Fixed but where "X" and Alt+F4 would not close dialog
22-august-2009 - adelikat - Win32 - Added a Save Config File menu item
12-august-2009 - adelikat - Win32 - Added a menu item to toggle to New PPU
10-august-2009 - adelikat - fixed bug that caused new movies be created in /movie instead of /movies
08-august-2009 - qeed - mappers - fixed mapper irq count, dragon ball z 3
should be playable again.
07-august-2009 - ugetab - win32 - imported NSF features from FCEU-XDSP-NSF
05-august-2009 - adelikat - win32 - fixed an erroneous assumption made in 2.1.1 that caused the recent roms menu to be grayed out even when there were recent roms (however, it uncovered an underlying bug in the recent menu saving that needs to be fixed at some point).

---r1375 - FCEUX 2.1.1---
---July 29, 2009---

01-july-2009 - adelikat - win32 - texthooker - drag & drop for table files
01-july-2009 - adelikat - win32 - drag & drop for cheat (.cht) files